--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "bugs": {
     "url": "https://github.com/gti-sos/SOS2425-20/issues"
   },
-  "homepage": "https://github.com/gti-sos/SOS2425-20#readme"
+  "homepage": "https://github.com/gti-sos/SOS2425-20#readme",
+  "dependencies": {
+    "cool-ascii-faces": "^1.3.4"
+  }
 }
-  
