--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/gti-sos/SOS2425-20#readme",
   "dependencies": {
     "cool-ascii-faces": "^1.3.4",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "nedb": "^1.8.0"
   }
 }
