--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "- **Team**   - José Calle Jiménez (https://github.com/Josecj11)   - Carlos Marmol Ramírez (https://github.com/carlosmarmol)   - Javier Andrade Castro (https://github.com/javandcas) - **Project description**: - Traffic Incidents Analysis and Visualization Our project focuses on analyzing and visualizing traffic-related incidents in Spain. We collect and process data on road accidents, traffic violations, and animal-related collisions to identify trends, assess risk factors, and provide insights - **Repository**: [gti-sos/SOS2425-20](https://github.com/gti-sos/SOS2425-20) - **URL**: TBD -  **APIs**:     - TBD     - TBD     - TBD",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
