--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test-api-local-JCJ": "npx newman run tests/back/api-traffic-accidents-tests.json -e tests/back/api-env-local.json",
+    "test-api-online-JCJ": "npx newman run tests/back/api-traffic-accidents-tests.json -e tests/back/api-env-online.json",
+    "test-local-JCJ": "start-server-and-test start http://localhost:16078 test-api-local-JCJ"
+
   },
   "repository": {
     "type": "git",
@@ -22,5 +25,8 @@
     "cool-ascii-faces": "^1.3.4",
     "express": "^4.21.2",
     "nedb": "^1.8.0"
+  },
+  "devDependencies": {
+    "start-server-and-test": "^2.0.11"
   }
 }
