--- a/.github/workflows/ci-JCJ.yaml
+++ b/.github/workflows/ci-JCJ.yaml
@@ -1,17 +1,14 @@
-name: CI / CD
-on: [push,pull_request]
+name: CI
+on: [push, pull_request]
 jobs:
   ci-cd:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Install dependences
+
+      - name: Install dependencies
         run: npm install
-      - name: Run tests
-        run: npm test
-      - name: Deploy to Render
-        uses: johnbeynon/render-deploy-action@v0.0.8
-        with:
-          service-id: ${{ secrets.MY_RENDER_SERVICE_ID }}
-          api-key: ${{ secrets.MY_RENDER_API_KEY }}
+
+      - name: Run JCJ tests with server
+        run: npm run test-local-JCJ
