--- a/.github/workflows/ci-JCJ.yaml
+++ b/.github/workflows/ci-JCJ.yaml
@@ -13,7 +13,7 @@ jobs:
       - name: Run JCJ tests with server
         run: npm run test-local-JCJ
       - name: Deploy to Render
-        uses: johnbeynon/render-deploy-action@0.0.8
+        uses: johnbeynon/render-deploy-action@v0.0.8
         with: 
           service-id: ${{ secrets.MY_RENDER_SERVICE_ID }}
           api-key: ${{ secrets.MY_RENDER_API_KEY }}
