--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "node index.js",
     "test-api-local-JCJ": "npx newman run tests/back/api-traffic-accidents-tests.json -e tests/back/api-env-local.json",
     "test-api-online-JCJ": "npx newman run tests/back/api-traffic-accidents-tests.json -e tests/back/api-env-online.json",
-    "test-traffic-accidents": "start-server-and-test start http://localhost:16078 test-api-local-JCJ"
-
+    "test-traffic-accidents": "start-server-and-test start http://localhost:16078 test-api-local-JCJ",
+    "test-api-local-JAC": "npx newman run tests/back/api-accidents-with-animals.json -e tests/back/api-env-local.json",
+    "test-api-online-JAC": "npx newman run tests/back/api-accidents-with-animals.json -e tests/back/api-env-online.json",
+    "test-accidents-with-animals": "start-server-and-test start http://localhost:16078 test-api-local-JAC"
   },
   "repository": {
     "type": "git",
