--- a/.github/workflows/ci-JCJ.yaml
+++ b/.github/workflows/ci-JCJ.yaml
@@ -9,6 +9,9 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+        
+      - name: Build front
+        run: npm run build
 
       - name: Run test with server
         run: npm test
