--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test-api-online-CMR": "npx newman run tests/back/api-fines-tests.json -e tests/back/api-env-online.json",
     "test-fines": "start-server-and-test start http://localhost:16078 test-api-local-CMR",
     "test-api-local": "npm run test-api-local-JAC && npm run test-api-local-JCJ && npm run test-api-local-CMR",
-    "test":"start-server-and-test start http://localhost:16078 test-api-local"
+    "test":"start-server-and-test start http://localhost:16078 test-api-local",
+    "build":"cd src/front; npm install; npm run build"
     
   },
   "repository": {
