--- a/package.json
+++ b/package.json
@@ -16,21 +16,20 @@
     "test-api-online-CMR": "npx newman run tests/back/api-fines-tests.json -e tests/back/api-env-online.json",
     "test-fines": "start-server-and-test start http://localhost:16078 test-api-local-CMR",
     "test-api-local": "npm run test-api-local-JAC && npm run test-api-local-JCJ && npm run test-api-local-CMR",
-    "test":"start-server-and-test start http://localhost:16078 test-api-local",
-    "build":"cd src/front; npm install; npm run build"
-    
+    "test": "start-server-and-test start http://localhost:16078 test-api-local",
+    "build": "cd src/front; npm install; npm run build"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gti-sos/SOS2425-20.git"
   },
-
   "bugs": {
     "url": "https://github.com/gti-sos/SOS2425-20/issues"
   },
   "homepage": "https://github.com/gti-sos/SOS2425-20#readme",
   "dependencies": {
     "cool-ascii-faces": "^1.3.4",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "nedb": "^1.8.0"
   },
