--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "cool-ascii-faces": "^1.3.4",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "nedb": "^1.8.0"
+    "nedb": "^1.8.0",
+    "playwright": "^1.52.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.52.0",
