--- a/src/front/package.json
+++ b/src/front/package.json
@@ -32,6 +32,7 @@
 		"vite": "^6.2.5"
 	},
 	"dependencies": {
-		"@sveltestrap/sveltestrap": "^7.1.0"
+		"@sveltestrap/sveltestrap": "^7.1.0",
+		"chart.js": "^4.4.9"
 	}
 }
