--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/gti-sos/SOS2425-20#readme",
   "dependencies": {
+    "chart.js": "^4.4.9",
     "cool-ascii-faces": "^1.3.4",
     "cors": "^2.8.5",
     "express": "^4.21.2",
