--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cool-ascii-faces": "^1.3.4",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "highcharts": "^12.2.0",
     "nedb": "^1.8.0",
     "playwright": "^1.52.0"
   },
