--- a/src/front/package.json
+++ b/src/front/package.json
@@ -34,6 +34,8 @@
 	"dependencies": {
 		"@sveltestrap/sveltestrap": "^7.1.0",
 		"c3": "^0.7.20",
-		"chart.js": "^4.4.9"
+		"chart.js": "^4.4.9",
+		"express": "^5.1.0",
+		"request": "^2.88.2"
 	}
 }
