--- a/package.json
+++ b/package.json
@@ -28,16 +28,22 @@
   },
   "homepage": "https://github.com/gti-sos/SOS2425-20#readme",
   "dependencies": {
+    "apexcharts": "^4.7.0",
+    "c3": "^0.7.20",
     "chart.js": "^4.4.9",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "cool-ascii-faces": "^1.3.4",
     "cors": "^2.8.5",
+    "d3": "^7.9.0",
     "express": "^4.21.2",
     "highcharts": "^12.2.0",
     "nedb": "^1.8.0",
-    "playwright": "^1.52.0"
+    "playwright": "^1.52.0",
+    "svelte-apexcharts": "^1.0.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.52.0",
+    "@types/chart.js": "^2.9.41",
     "@types/node": "^22.14.1",
     "start-server-and-test": "^2.0.11"
   },
