--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "d3": "^7.9.0",
     "express": "^4.21.2",
     "highcharts": "^12.2.0",
+    "morris.js": "^0.5.0",
     "nedb": "^1.8.0",
     "playwright": "^1.52.0",
+    "raphael": "^2.3.0",
     "svelte-apexcharts": "^1.0.2"
   },
   "devDependencies": {
