--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     "morris.js": "^0.5.0",
     "nedb": "^1.8.0",
     "playwright": "^1.52.0",
-    "raphael": "^2.3.0",
-    "svelte-apexcharts": "^1.0.2"
+    "raphael": "^2.3.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.52.0",
